--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "next": "13.5.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
