--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.6.2",
+    "chatgpt": "^5.2.5",
     "firebase": "^10.6.0",
+    "firebase-admin": "^12.0.0",
     "next": "13.5.4",
+    "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
+    "openai": "^3.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
+    "react-select": "^5.8.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
